--- a/mvxtm.scss
+++ b/mvxtm.scss
@@ -6,7 +6,7 @@
 $font-primary: "Work Sans", serif !important;
 $font-secondary: "Teko", serif !important;
 $domain: "https://fnshr.clothing";
-$domain: "/";
+$domain: "";
 
 html,
 body {
