--- a/mvxtm.scss
+++ b/mvxtm.scss
@@ -5,8 +5,8 @@
 
 $font-primary: "Work Sans", serif !important;
 $font-secondary: "Teko", serif !important;
-$domain: "https://fnshr.clothing";
-$domain: "";
+//$domain: "https://fnshr.clothing";
+$domain: "https://sxsmobility.com";
 
 html,
 body {
