--- a/mvxtm.scss
+++ b/mvxtm.scss
@@ -8,6 +8,8 @@ $font-secondary: "Teko", serif !important;
 //$domain: "https://fnshr.clothing";
 $domain: "https://sxsmobility.com";
 
+/* 20.01.06-23.22 */
+
 html,
 body {
 	color: #555 !important;
