--- a/mvxtm.css
+++ b/mvxtm.css
@@ -8476,6 +8476,7 @@ header.page-header.type15 .minicart-wrapper .minicart-items .product-item-detail
   }
 }
 
+/* 20.01.06-23.22 */
 html,
 body {
   color: #555 !important;
