--- a/mvxtm.scss
+++ b/mvxtm.scss
@@ -10,6 +10,7 @@ $domain: "https://sxsmobility.com";
 
 /* 200107-0109 */
 
+
 html,
 body {
 	color: #555 !important;
@@ -203,6 +204,7 @@ button.action.primary {
 }
 
 .product-info-main {
+	position: relative;
 	&:before {
 		content: "";
 		background:url("#{$domain}/img/streak.png");
@@ -211,7 +213,7 @@ button.action.primary {
 		height: 300px;
 		background-position: center center;
 		position: absolute;
-		top: 64px;
+		top: 24px;
 		left: -32px;
 	}
 }
