--- a/mvxtm.scss
+++ b/mvxtm.scss
@@ -1,14 +1,11 @@
-//@import "https://fonts.googleapis.com/css?family=Work+Sans:300,400,500,600,700.css";
-//@import "https://fonts.googleapis.com/css?family=Teko:500,600|Work+Sans:400,500,700&display=swap";
-
-@import "1573666490/custom.scss";
 
 $font-primary: "Work Sans", serif !important;
 $font-secondary: "Teko", serif !important;
-//$domain: "https://fnshr.clothing";
 $domain: "https://sxsmobility.com";
 
-/* 200107-0109 */
+@import "1573666490/custom.scss";
+
+/* 200107_0125 */
 
 
 html,
