--- a/mvxtm.scss
+++ b/mvxtm.scss
@@ -5,7 +5,7 @@ $domain: "https://sxsmobility.com";
 
 @import "1573666490/custom.scss";
 
-/* 200107_0125 */
+/* 200107_0130 */
 
 
 html,
@@ -64,7 +64,7 @@ header.page-header {
 				//top: 105px;
 				z-index: 7;
 				
-				.subchildmenu  {
+				.subchildmenu li {
 					float: right;
 				}
 			}
